--- a/css/common.css
+++ b/css/common.css
@@ -10,7 +10,7 @@ body{overflow-x: hidden;}
 .logo{line-height:70px;font-size:30px;}
 .logo h3{font-weight:200;}
 .menu{display:flex;width:60%;justify-content: space-around;line-height:70px;}
-.menu .sub{font-size:18px;font-weight:800;width:25%;text-align: center;}
+.menu .sub{font-size:18px;font-weight:800;width:25%;text-align: center;transition:.5s;}
 .thing{display:flex;line-height:70px;}
 .thing h3{font-size:16px;font-weight:200;}
 .upper>input{position: absolute;z-index:30;}
@@ -38,10 +38,11 @@ body{overflow-x: hidden;}
 .rounded{display:flex;flex-wrap:wrap;align-items:center;justify-content: center;z-index:20;width:150px;height:70px;margin:0 auto;}
 .rounded:hover{cursor:pointer;}
 .rounded:hover .circle{border:2px solid #c44283;opacity:.7;}
+.rounded:hover h4{color:#c44283;}
 .circle{border:2px solid #fff;position: absolute;transition:.5s;}
 .c1{width:130px;height:34px;border-radius:17px;margin-left:-10px;}
 .c2{width:135px;height:50px;border-radius:25px;margin-left:10px;}
-.rounded h4{position: absolute;font-weight:200;}
+.rounded h4{position: absolute;font-weight:200;transition:.5s;}
 
 #pos1:checked ~ .slide ul li:nth-child(1){transform: translateY(000%);z-index: -10}
 #pos1:checked ~ .slide ul li:nth-child(2){transform: translateY(100%);z-index: -20}
@@ -195,8 +196,10 @@ body{overflow-x: hidden;}
 
 .part4 .part4_sub .p4_txt h3{font-size:20px;}
 .part4 .part4_sub .p4_txt p{font-size:13px;color:rgba(0,0,0,.6);}
-.part4 .part4_sub .p4_txt .part4_btn{width:100px;height:30px;border-radius:15px;border:1px solid #aaa;text-align: center;margin:20px 5px;}
-.part4 .part4_sub .p4_txt .part4_btn{font-size:14px;color:#aaa;line-height:30px;}
+.part4 .part4_sub .p4_txt .part4_btn{width:100px;height:30px;border-radius:15px;border:1px solid #aaa;text-align: center;margin:20px 5px;transition:.3s;}
+.part4 .part4_sub .p4_txt .part4_btn:hover{border:1px solid #c44283;}
+.part4 .part4_sub .p4_txt .part4_btn:hover p{color:#c44283;}
+.part4 .part4_sub .p4_txt .part4_btn p{font-size:14px;color:#aaa;line-height:30px;transition:.3s;}
 .part4 .part4_sub .part4_forming {position: absolute;width: 100%;height: 100%;background: #faa;}
 .part4 .part4_sub .img1{right: 5%;top:    5%;width: 40%; height: 45%;z-index: 20;background:url(../img/part3_subimg1.jpg) no-repeat center / cover;}
 .part4 .part4_sub .img2{left:  5%;bottom: 5%;width: 40%; height: 45%;z-index: 20;background:url(../img/part3_subimg2.jpg) no-repeat center / cover;}
